add: user model 代码生成

--- a/service/user/etc/user.yaml
+++ b/service/user/etc/user.yaml
@@ -4,3 +4,6 @@ Etcd:
   Hosts:
   - 127.0.0.1:2379
   Key: user.rpc
+
+DB:
+  DataSource: thebs:thebs:gogotiktok@tcp(124.71.9.116:3306)/gotiktok?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
