--- a/service/comment/etc/comment.yaml
+++ b/service/comment/etc/comment.yaml
@@ -4,3 +4,6 @@ Etcd:
   Hosts:
   - 127.0.0.1:2379
   Key: comment.rpc
+  
+DB:
+  DataSource: thebs:gogotiktok@tcp(124.71.9.116:3306)/gotiktok?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
