--- a/service/comment/etc/comment.yaml
+++ b/service/comment/etc/comment.yaml
@@ -7,3 +7,8 @@ Etcd:
   
 DB:
   DataSource: thebs:gogotiktok@tcp(124.71.9.116:3306)/gotiktok?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+
+LOG:
+  ServiceName: "comment"
+  Mode: "file"
+  
