--- a/service/user/etc/user.yaml
+++ b/service/user/etc/user.yaml
@@ -1,9 +1,9 @@
 Name: user.rpc
 ListenOn: 0.0.0.0:2004
-# Etcd:
-#   Hosts:
-#   - 127.0.0.1:2379
-#   Key: user.rpc
+Etcd:
+  Hosts:
+  - 127.0.0.1:2379
+  Key: user.rpc
 
 DB:
   DataSource: thebs:gogotiktok@tcp(124.71.9.116:3306)/gotiktok?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
