--- a/service/publish/etc/publish.yaml
+++ b/service/publish/etc/publish.yaml
@@ -2,13 +2,14 @@ Name: publish.rpc
 ListenOn: 0.0.0.0:8080
 Etcd:
   Hosts:
-  - 127.0.0.1:2378
+  - 127.0.0.1:2379
   Key: publish.rpc
 
 LogConf:
   ServiceName: "publish"
   Mode: "file"
   Path: "../../logs"
+  Level: "debug"
 
 DB:
   DataSource: thebs:gogotiktok@tcp(124.71.9.116:3306)/gotiktok?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
