Modify: unify naming

--- a/api_gateway/etc/service.yaml
+++ b/api_gateway/etc/service.yaml
@@ -47,7 +47,7 @@ PublishRpcConf:
       - 127.0.0.1:2379
     Key: publish.rpc
 
-Comment:
+CommentRpcConf:
   Etcd:
     Hosts:
       - 127.0.0.1:2379
