Modify: comment use user microservice

--- a/service/comment/etc/comment.yaml
+++ b/service/comment/etc/comment.yaml
@@ -19,3 +19,10 @@ RedisConf:
   Pass: ""
   Tls:  false
   DB:   0
+
+UserRpcConf:
+  Etcd:
+    Hosts:
+      - 127.0.0.1:2379
+    Key: user.rpc
+  NonBlock: true
