--- a/modd.conf
+++ b/modd.conf
@@ -1,7 +1,7 @@
 # http-app
-api-gateway/**/*.go {
-    prep: go build -o deploy/build/api-gateway -v api-gateway/service.go
-    daemon +sigkill: deploy/build/api-gateway -f api-gateway/etc/service.yaml
+api_gateway/**/*.go {
+    prep: go build -o deploy/build/api_gateway -v api_gateway/service.go
+    daemon +sigkill: deploy/build/api_gateway -f api_gateway/etc/service.yaml
 }
 
 # rpc-user
