--- a/service/feed/etc/feed.yaml
+++ b/service/feed/etc/feed.yaml
@@ -2,7 +2,7 @@ Name: feed.rpc
 ListenOn: 0.0.0.0:8082
 Etcd:
   Hosts:
-  - 127.0.0.1:2379
+  - etcd:2379
   Key: feed.rpc
 Log:
   Encoding: "plain"
