--- a/service/message/etc/message.yaml
+++ b/service/message/etc/message.yaml
@@ -2,7 +2,7 @@ Name: message.rpc
 ListenOn: 0.0.0.0:8083
 Etcd:
   Hosts:
-  - 127.0.0.1:2379
+  - etcd:2379
   Key: message.rpc
 Log:
   Encoding: "plain"
