--- a/service/publish/etc/publish.yaml
+++ b/service/publish/etc/publish.yaml
@@ -2,7 +2,7 @@ Name: publish.rpc
 ListenOn: 0.0.0.0:8084
 Etcd:
   Hosts:
-  - 127.0.0.1:2379
+  - etcd:2379
   Key: publish.rpc
 
 LogConf:
@@ -17,5 +17,5 @@ DB:
 UserRpcConf:
   Etcd:
     Hosts:
-      - 127.0.0.1:2379
+      - etcd:2379
     Key: user.rpc
