Add: finish docker compose config

--- a/modd.conf
+++ b/modd.conf
@@ -1,47 +1,47 @@
 # http-app
 api_gateway/**/*.go {
-    prep: go build -o deploy/build/api_gateway -v api_gateway/service.go
-    daemon +sigkill: deploy/build/api_gateway -f api_gateway/etc/service.yaml
+    prep: go build -o build/api_gateway -v api_gateway/service.go
+    daemon +sigkill: build/api_gateway -f api_gateway/etc/service.yaml
 }
 
 # rpc-user
 service/user/**/*.go {
-    prep: go build -o deploy/build/rpc-user -v service/user/user.go
-    daemon +sigkill: deploy/build/rpc-user -f service/user/etc/user.yaml
+    prep: go build -o build/rpc-user -v service/user/user.go
+    daemon +sigkill: build/rpc-user -f service/user/etc/user.yaml
 }
 
 # rpc-publish
 service/publish/**/*.go {
-    prep: go build -o deploy/build/rpc-publish -v service/publish/publish.go
-    daemon +sigkill: deploy/build/rpc-publish -f service/publish/etc/publish.yaml
+    prep: go build -o build/rpc-publish -v service/publish/publish.go
+    daemon +sigkill: build/rpc-publish -f service/publish/etc/publish.yaml
 }
 
 # rpc-comment
 service/comment/**/*.go {
-    prep: go build -o deploy/build/rpc-comment -v service/comment/comment.go
-    daemon +sigkill: deploy/build/rpc-comment -f service/comment/etc/comment.yaml
+    prep: go build -o build/rpc-comment -v service/comment/comment.go
+    daemon +sigkill: build/rpc-comment -f service/comment/etc/comment.yaml
 }
 
 # rpc-favorite
 service/favorite/**/*.go {
-    prep: go build -o deploy/build/rpc-favorite -v service/favorite/favorite.go
-    daemon +sigkill: deploy/build/rpc-favorite -f service/favorite/etc/favorite.yaml
+    prep: go build -o build/rpc-favorite -v service/favorite/favorite.go
+    daemon +sigkill: build/rpc-favorite -f service/favorite/etc/favorite.yaml
 }
 
 # rpc-feed
 service/feed/**/*.go {
-    prep: go build -o deploy/build/rpc-feed -v service/feed/feed.go
-    daemon +sigkill: deploy/build/rpc-feed -f service/feed/etc/feed.yaml
+    prep: go build -o build/rpc-feed -v service/feed/feed.go
+    daemon +sigkill: build/rpc-feed -f service/feed/etc/feed.yaml
 }
 
 # rpc-message
 service/message/**/*.go {
-    prep: go build -o deploy/build/rpc-message -v service/message/message.go
-    daemon +sigkill: deploy/build/rpc-message -f service/message/etc/message.yaml
+    prep: go build -o build/rpc-message -v service/message/message.go
+    daemon +sigkill: build/rpc-message -f service/message/etc/message.yaml
 }
 
 # rpc-relation
 service/relation/**/*.go {
-    prep: go build -o deploy/build/rpc-video -v service/relation/relation.go
-    daemon +sigkill: deploy/build/rpc-video -f service/relation/etc/relation.yaml
+    prep: go build -o build/rpc-video -v service/relation/relation.go
+    daemon +sigkill: build/rpc-video -f service/relation/etc/relation.yaml
 }
