Modify: rpc-* -> *_rpc

--- a/modd.conf
+++ b/modd.conf
@@ -1,13 +1,7 @@
-# http-app
-api_gateway/**/*.go {
-    prep: go build -o build/api_gateway -v api_gateway/service.go
-    daemon +sigkill: build/api_gateway -f api_gateway/etc/service.yaml
-}
-
-# rpc-user
+# user_rpc
 service/user/**/*.go {
-    prep: go build -o build/rpc-user -v service/user/user.go
-    daemon +sigkill: build/rpc-user -f service/user/etc/user.yaml
+    prep: go build -o build/user_rpc -v service/user/user.go
+    daemon +sigkill: build/user_rpc -f service/user/etc/user.yaml
 }
 
 # rpc-publish
@@ -16,16 +10,16 @@ service/publish/**/*.go {
     daemon +sigkill: build/rpc-publish -f service/publish/etc/publish.yaml
 }
 
-# rpc-comment
+# comment_rpc
 service/comment/**/*.go {
-    prep: go build -o build/rpc-comment -v service/comment/comment.go
-    daemon +sigkill: build/rpc-comment -f service/comment/etc/comment.yaml
+    prep: go build -o build/comment_rpc -v service/comment/comment.go
+    daemon +sigkill: build/comment_rpc -f service/comment/etc/comment.yaml
 }
 
-# rpc-favorite
+# favorite_rpc
 service/favorite/**/*.go {
-    prep: go build -o build/rpc-favorite -v service/favorite/favorite.go
-    daemon +sigkill: build/rpc-favorite -f service/favorite/etc/favorite.yaml
+    prep: go build -o build/favorite_rpc -v service/favorite/favorite.go
+    daemon +sigkill: build/favorite_rpc -f service/favorite/etc/favorite.yaml
 }
 
 # rpc-feed
@@ -34,14 +28,20 @@ service/feed/**/*.go {
     daemon +sigkill: build/rpc-feed -f service/feed/etc/feed.yaml
 }
 
-# rpc-message
+# message_rpc
 service/message/**/*.go {
-    prep: go build -o build/rpc-message -v service/message/message.go
-    daemon +sigkill: build/rpc-message -f service/message/etc/message.yaml
+    prep: go build -o build/message_rpc -v service/message/message.go
+    daemon +sigkill: build/message_rpc -f service/message/etc/message.yaml
 }
 
-# rpc-relation
+# relation_rpc
 service/relation/**/*.go {
-    prep: go build -o build/rpc-video -v service/relation/relation.go
-    daemon +sigkill: build/rpc-video -f service/relation/etc/relation.yaml
+    prep: go build -o build/relation_rpc -v service/relation/relation.go
+    daemon +sigkill: build/relation_rpc -f service/relation/etc/relation.yaml
+}
+
+# api_gateway
+api_gateway/**/*.go {
+    prep: go build -o build/api_gateway -v api_gateway/service.go
+    daemon +sigkill: build/api_gateway -f api_gateway/etc/service.yaml
 }
