Fix: http method

--- a/modd.conf
+++ b/modd.conf
@@ -4,10 +4,10 @@ service/user/**/*.go {
     daemon +sigkill: build/user_rpc -f service/user/etc/user.yaml
 }
 
-# rpc-publish
+# publish_rpc
 service/publish/**/*.go {
-    prep: go build -o build/rpc-publish -v service/publish/publish.go
-    daemon +sigkill: build/rpc-publish -f service/publish/etc/publish.yaml
+    prep: go build -o build/publish_rpc -v service/publish/publish.go
+    daemon +sigkill: build/publish_rpc -f service/publish/etc/publish.yaml
 }
 
 # comment_rpc
@@ -22,10 +22,16 @@ service/favorite/**/*.go {
     daemon +sigkill: build/favorite_rpc -f service/favorite/etc/favorite.yaml
 }
 
-# rpc-feed
+# favorite_consumer
+service/favorite/**/*.go {
+    prep: go build -o build/favorite_consumer -v service/favorite_consumer/main.go
+    daemon +sigkill: build/favorite_consumer
+}
+
+# feed_rpc
 service/feed/**/*.go {
-    prep: go build -o build/rpc-feed -v service/feed/feed.go
-    daemon +sigkill: build/rpc-feed -f service/feed/etc/feed.yaml
+    prep: go build -o build/feed_rpc -v service/feed/feed.go
+    daemon +sigkill: build/feed_rpc -f service/feed/etc/feed.yaml
 }
 
 # message_rpc
