--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,6 +52,7 @@ services:
   # Redis
  redis:
   image: redis:7.0.12
+  container_name: redis
   ports:
    - 6379:6379
   networks:
@@ -59,3 +60,6 @@ services:
   volumes:
    - ./pkg/configs/redis/redis.conf:/etc/redis/redis.conf
   command: "redis-server /etc/redis/redis.conf"
+  environment:
+   TZ: Asia/Shanghai
+  restart: always
